--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a {
 .header {
     padding-top: 24px;
     padding-bottom: 25px;
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 .container {
     width: 1200px;
@@ -49,10 +49,9 @@ a {
     margin-left: auto;
     align-items: center;
 }
-.contacts-item :nth-child(1){
-    margin-right: 50px;
+.contacts-link-icon {
+    margin-right: 10px;
 }
-
 .header-logo {
     font-family: raleway, sans-serif;
     font-weight: 700;
@@ -80,10 +79,16 @@ a {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--lilte-text-color);
+    margin-left: 30px;
+}
+.contacts-link-icon {
+    fill: currentColor;
 }
 
 .header-link:hover,
 .header-link:focus,
+.contacts-link-icon:hover
+.contacts-link-icon:focus,
 .contacts-link:hover,
 .contacts-link:focus,
 .link-footer:hover,
@@ -92,7 +97,8 @@ a {
 .button-bt:focus {
     color: var(--accent-color);
 }
-.button-bt:hover {
+.button-bt:hover,
+.baner-bt:hover {
     background-color: var(--accent-color);
     color: var(--bt-color);
 }
@@ -116,9 +122,9 @@ a {
     url(../images/banner-foto.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
     box-sizing: border-box;
     border: 1px solid #000000;
+    background-size: cover;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding-top: 200px;
     padding-bottom: 200px;
@@ -131,8 +137,13 @@ a {
     letter-spacing: 0.06em;
     color: var(--bt-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
     cursor: pointer;
     margin-top: 30px;
+    width: 200px;
+    height: 50px;
+    font-weight: 700;
 }
 .button-bt {
     font-weight: 500;
@@ -162,6 +173,7 @@ a {
 .about-item {
     margin-right: 30px;
 }
+
 .about-item-title {
     font-weight: 700;
     font-size: 14px;
@@ -170,14 +182,22 @@ a {
     text-transform: uppercase;
     color: var(--text-color);
 }
-
+.about-item-link {
+    width: 270px;
+    height: 120px;
+    background: #F5F4FA;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .about-item-text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--lilte-text-color);
     margin-top: 10px;
-    margin-bottom: 94px;
  }
 .flex-list {
     display: flex;
@@ -195,6 +215,10 @@ a {
 }
 .flex-list-card:nth-child(n+7) {
     margin-bottom: 0px;
+}
+.flex-list-card:focus, .flex-list-card:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
 }
 
 .flex-list-name {
@@ -252,9 +276,20 @@ a {
 .team-social-link {
     width: 44px;
     height: 44px;
-    background-color: rgb(151, 131, 131);
-    display: block;
+    background-color: var(--bt-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
+    margin-top: 16px;
+    color: #AFB1B8;
+ }
+ .team-social-icon {
+     fill: currentColor;
+ }
+.team-social-link:hover, .team-social-link:focus {
+    background-color: var(--accent-color);
+    color: #FFFFFF;
 }
 .team-card-fon {
     width: 270px;
@@ -264,12 +299,11 @@ a {
     border-radius: 0px 0px 4px 4px;
 }
 .team-text {
-    padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
 }
 .team-icons {
-    padding: 16px 32px 30px;
+    padding: 30px 32px;
 }
 .team-item-name {
     font-weight: 500;
@@ -290,6 +324,42 @@ a {
     display: flex;
     justify-content: space-between;
 }
+/* ------------------Clients-------------- */
+.clients-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+    margin-bottom: 50px;
+}
+.clients-list {
+    display: flex;
+    justify-content: center;
+}
+.clients-item {
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    box-sizing: border-box;
+    border-radius: 4px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.clients-link {
+    color: #AFB1B8;
+}
+.clients-icon {
+    fill: currentColor;
+}
+.clients-icon:hover,clients-link:hover, 
+.clients-icon:focus {
+    color: var(--accent-color);
+}
+
 /* -------------Footer------------------- */
 footer {
     padding-top: 60px;
@@ -297,12 +367,16 @@ footer {
     background-color: var(--baner-color);
 }
 
+.container-footer {
+    display: flex;
+}
 .logo-color-footer {
     color: var(--bt-color);
 }
 .footer-address {
     font-style: normal;
     margin-top: 20px;
+    display: flex;
  }
 .footer-item {
     font-size: 14px;
@@ -317,4 +391,38 @@ footer {
     letter-spacing: 0.03em;
     color: var(--lilte-text-color);
     margin-top: 9px;
+}
+.footer-social-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    color: var(--bt-color);
+    text-transform: uppercase;
+    margin-left: 150px;
+    padding: 7px;
+}
+.footer-social-list {
+    display: flex;
+    justify-content: center;
+}
+.footer-social-link {
+    width: 44px;
+    height: 44px;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-left: 10px;
+    color: #FFFFFF;
+}
+.footer-social-icon {
+    fill: currentColor;
+}
+.footer-social {
+    margin-left: 70px;
+}
+.footer-social-link:hover, .team-social-link:focus {
+    background-color: var(--accent-color);
 }
