--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a {
      color: #000000;
 }
 .header-item {
-    margin-right: 50px;
+    margin-left: 50px;
 }
 .header-link {
     font-weight: 500;
@@ -73,13 +73,17 @@ a {
     letter-spacing: 0.02em;
     color: var(--text-color); 
 }
+.contacts-item {
+    margin-right: 30px;
+}
 .contacts-link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--lilte-text-color);
-    margin-left: 30px;
+    display: flex;
+    align-items: center;
 }
 .contacts-link-icon {
     fill: currentColor;
@@ -122,10 +126,7 @@ a {
     url(../images/banner-foto.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    box-sizing: border-box;
-    border: 1px solid #000000;
     background-size: cover;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
@@ -152,19 +153,32 @@ a {
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--text-color);
-    margin-right: 8px;
     background-color: var(--team-color);
     border:1px solid #F5F4FA ;
     padding: 6px 22px;
 }
+.button-item:not(:last-child) {
+    margin-right: 8px;
+}
+
 .button-wrap {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
 .button-title {
-    display: none;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
+
 /* ----------------section-About------------------- */
 .section {
     padding-top: 94px;
@@ -204,10 +218,7 @@ a {
     flex-wrap: wrap;
 }
 .flex-list-card {
-    width: 370px;
-    height: 404px;
     background-color: var(--bt-color);
-    border: 1px solid #EEEEEE;
     margin-bottom: 30px;
 }
 .flex-list-card:not(:nth-child(3n)) {
@@ -216,23 +227,28 @@ a {
 .flex-list-card:nth-child(n+7) {
     margin-bottom: 0px;
 }
-.flex-list-card:focus, .flex-list-card:hover {
+.flex-list-link {
+    display: block;
+}
+.flex-list-link:focus, .flex-list-link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
 }
-
+.flex-list-text {
+    padding: 20px 24px;
+}
 .flex-list-name {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    padding: 24px 24px 4px 24px;
+    color: var(--text-color);
 }
 .flex-list-profession {
     font-size: 16px;
-    line-height: 1,87;
+    line-height: 1.87;
     letter-spacing: 0.03em;
-    padding: 0px 24px;
+    color: var(--lilte-text-color);
 }
 .about-list {
     display: flex;
@@ -272,6 +288,10 @@ a {
 .team-social-list {
     display: flex;
     justify-content: center;
+    margin-top: 16px;
+}
+.team-social-item {
+    margin-right: 10px;
 }
 .team-social-link {
     width: 44px;
@@ -281,7 +301,6 @@ a {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    margin-top: 16px;
     color: #AFB1B8;
  }
  .team-social-icon {
@@ -303,7 +322,7 @@ a {
     text-align: center;
 }
 .team-icons {
-    padding: 30px 32px;
+    padding: 30px 0;
 }
 .team-item-name {
     font-weight: 500;
@@ -336,28 +355,33 @@ a {
 }
 .clients-list {
     display: flex;
-    justify-content: center;
 }
 .clients-item {
     width: 170px;
     height: 92px;
-    border: 1px solid #AFB1B8;
-    box-sizing: border-box;
-    border-radius: 4px;
-    margin-right: 30px;
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+.clients-item:not(:last-child) {
+    margin-right: 30px;
 }
 .clients-link {
+    width: 100%;
+    height: 100%;
     color: #AFB1B8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
 }
 .clients-icon {
     fill: currentColor;
 }
-.clients-icon:hover,clients-link:hover, 
-.clients-icon:focus {
+.clients-link:hover,
+.clients-link:focus {
     color: var(--accent-color);
+    border-color: var(--accent-color);
 }
 
 /* -------------Footer------------------- */
@@ -366,23 +390,24 @@ footer {
     padding-bottom: 60px;
     background-color: var(--baner-color);
 }
-
-.container-footer {
+.footer-container {
     display: flex;
+    align-items: baseline;
 }
+
 .logo-color-footer {
     color: var(--bt-color);
 }
 .footer-address {
     font-style: normal;
     margin-top: 20px;
-    display: flex;
- }
+  }
 .footer-item {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--bt-color);
+    margin-top: 9px;
 }
 
 .link-footer {
@@ -390,7 +415,6 @@ footer {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--lilte-text-color);
-    margin-top: 9px;
 }
 .footer-social-text {
     font-weight: 700;
@@ -399,12 +423,13 @@ footer {
     letter-spacing: 0.03em;
     color: var(--bt-color);
     text-transform: uppercase;
-    margin-left: 150px;
-    padding: 7px;
+    margin-bottom: 20px;
 }
 .footer-social-list {
     display: flex;
-    justify-content: center;
+}
+.footer-social-item:not(:last-child) {
+    margin-right: 10px;
 }
 .footer-social-link {
     width: 44px;
@@ -414,7 +439,6 @@ footer {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    margin-left: 10px;
     color: #FFFFFF;
 }
 .footer-social-icon {
@@ -423,6 +447,6 @@ footer {
 .footer-social {
     margin-left: 70px;
 }
-.footer-social-link:hover, .team-social-link:focus {
+.footer-social-link:hover, .footer-social-link:focus {
     background-color: var(--accent-color);
 }
