--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ a {
     justify-content: center;
     margin-bottom: 50px;
 }
-.button-title {
+.visually-hidden {
     position: absolute;
     white-space: nowrap;
     width: 1px;
